# MCU

./: README.md  compile_commands.json  makefile
.cache/clangd/index/: main.cpp.03C360210082134B.idx
Arduino/: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  main.cpp  makefile
Arduino/Modules/Hal/: write.h
Arduino/Modules/Hal/Interrupt/: CMakeLists.txt  interrupt.cpp  interrupt.h
Arduino/Modules/Independents/: apartment.cpp  blink.cpp  lightsWithBtn.cpp
Arduino/Modules/KeyPad/: CMakeLists.txt  keyPad.cpp  keyPad.h
Arduino/Modules/UART/: CMakeLists.txt  UART.cpp  UART.h
Arduino/Sketch/: trafficLight.cpp
Arduino/Sketch/Modules/UART/: UART.cpp  UART.h  makefile
Arduino/cmake/: avr-toolchain.cmake
